# groot-ops

./: .env.example  .gitignore  PROJECT_HANDOFF_CHECKPOINT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: index.py
configs/: client.example.yaml  pilot_realtor.example.yaml  sample_realtor.yaml
data/: sample_leads.csv
docs/: POC_SYSTEM_DESIGN.md  client_onboarding_checklist.md  demo_ui_runbook.md  deployment_cron.md  google_sheets_setup.md  operator_runbook.md  safety_policy.md  sheet_schema.md
docs/plans/: 2026-05-28-lightweight-demo-ui.md  2026-05-28-phase-1-5-production-readiness.md  2026-06-18-stable-poc-auth-neon-rollout.md
migrations/: 001_auth_and_clients.sql  002_align_client_config_defaults.sql
prompts/: daily_summary.md  lead_followup_draft.md
scripts/: apply_migrations.py  production_readiness_check.py
src/groot_ops/: __init__.py  activity_log.py  approval_queue.py  auth.py  config_loader.py  csv_repository.py  daily_summary.py  db.py  google_sheets_repository.py  lead_scorer.py  main_daily_summary.py  main_process_leads.py  main_ui.py  message_drafter.py  models.py  owner_notifications.py  repository_factory.py  sheet_mapping.py  ui_app.py  ui_config_service.py
src/groot_ops/static/: styles.css
tests/: test_auth.py  test_config_loader.py  test_daily_summary.py  test_db.py  test_google_sheets_repository.py  test_lead_scorer.py  test_message_and_approval.py  test_migrations.py  test_owner_notifications.py  test_process_leads_safety.py  test_ui_app.py  test_ui_config_service.py
(+6 files in other folders)
