[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groot-ops"
version = "0.1.0"
description = "Groot Ops Phase 1 MVP scaffold for real estate lead follow-up and daily summaries"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
sheets = ["google-api-python-client>=2.0", "google-auth>=2.0"]
ui = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
groot_ops = ["templates/*.html", "static/*.css"]
